?

- removed:
  __mirv_movie_oldcapture, mirv_movie_customdump

2.0.0.3


+ Adapted HLAE to the 2008-04-14 H-L engine update
  (updated mdt_addresses.ini)


2.0.0.2

This time we got some colors for L. 'spunge' M.:

Added: mirv_playercolors
  This allows to control the hudtext player colors per playerid.
  For each playerid the following colors can be controlled idenpendently:
    attacker's deathnotice color,
    victim's deathnotice color,
    head-up color (overview + playername head-up).
  For more information enter the command into console or see HLAE wiki.


2.0 pre-release

As always the following text contains many mistakes (as most changelog
entries) due to lack of time and dedication to writing changelogs.

- Changed: The MDT project has now been reenamed to
           Half-Life Advanced Effects (HLAE)

- Added: The HLAE Graphical User Interface, which will be extended in the
         future. The GUI is based on wxWidgets ( http://www.wxwidgets.org/ ).
         
- Changed: The MDTloader has been integrated into the HLAE Gui.
           Select File->Launch from the menu to bring it up.

- Added: DemoTools: select Tools->Demo Tool form the menu.
         This tool migrates 2 old tools into the gui:
         DemoCleanup by MirvinMonkey:
           Remove scoreboard, commandmenu, ...
           Added ability to block other commands too.
         Half-Life Demo Fix by ripieces:
           Repair demos that were recorded while the game crashed.
           Added ability to repair more than 2 segments.
         And adds a new one:
         dem_forcehltv 1 camera stuck fix:
           Tries to fix the camera being stuck when using dem_forcehltv 1
           with some in-eye demos.
           
- Added: mirv_voice_block (for John 'VAFarmboy' D.)
         this command allows blocking the voice data of specific players

- Changed: mirv_fixforcehltv defaults to 0 again, mirv will try to autodetect
           the dem_forcehltv setting and set fixforcehltv accordingly
